stylesheets/DragableContainer.css
.dragable_container {
    position: absolute;
    z-index: 9;
    min-width: 30%;
}

.dragable_container_header {
    padding: 10px;
    cursor: move;
    z-index: 10;
    background-color: #17a2b8;
    color: #fff;
    text-align: center;
}

.dragable_container_header:hover {
    background-color: #383e49;
}

.dragable_container_content {
    position: absolute;
    resize: vertical;
    width: 100%;
    margin-bottom: 2rem;
    z-index: 1;
    overflow-x: hidden;
    padding: 20px;
    background-color: #f1f1f1;
    border: 1px solid #d3d3d3;
}

#dragable_container_manual {
    top: 458px;
    left: 16px;
}

#dragable_container_step {
    top: 458px;
    left: 454px;
}

#dragable_container_step_content {
    text-align: center;
}

#dragable_container_step_content .row {
    margin: 0px;
    padding-left: 50px;
    padding-right: 50px;
}

#search_title {
    text-align: center;
}

